# shiftwrangler

./: Cargo.toml  README.md
config/: default.toml
crates/agents/: Cargo.toml
crates/agents/src/: claude_code.rs  shell_process.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: daemon.rs
crates/core/: Cargo.toml
crates/daemon/: Cargo.toml
crates/daemon/src/: health.rs  lifecycle.rs  main.rs  scheduler.rs
crates/state/: Cargo.toml
crates/state/src/: local_fs.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
