[workspace]
members = [
    "crates/core",
    "crates/daemon",
    "crates/cli",
    "crates/web",
    "crates/agents",
    "crates/platforms",
    "crates/state",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["shiftwrangler contributors"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Web
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# SSH
russh = "0.49"
russh-keys = "0.49"

# Scheduling
tokio-cron-scheduler = "0.13"

# Persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# Unix signals
nix = { version = "0.29", features = ["signal", "process"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"

# Testing
mockall = "0.13"
