[package]
name = "shiftwrangler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "swctl"
path = "src/main.rs"

[dependencies]
shiftwrangler-core = { path = "../core" }
shiftwrangler-daemon = { path = "../daemon" }
shiftwrangler-state = { path = "../state" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
