[package]
name = "shiftwrangler-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[features]
test-utils = ["mockall"]

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["full"] }
