[package]
name = "shiftwrangler-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
shiftwrangler-core = { path = "../core" }
shiftwrangler-agents = { path = "../agents" }
shiftwrangler-platforms = { path = "../platforms" }
shiftwrangler-state = { path = "../state" }
shiftwrangler-web = { path = "../web" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-cron-scheduler.workspace = true
chrono.workspace = true
config.workspace = true
toml.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["full"] }
shiftwrangler-core = { path = "../core", features = ["test-utils"] }
tempfile = "3"
