[package]
name = "shiftwrangler-state"
version.workspace = true
edition.workspace = true

[dependencies]
shiftwrangler-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
shiftwrangler-core = { path = "../core", features = ["test-utils"] }
