[package]
name = "shiftwrangler-web"
version.workspace = true
edition.workspace = true

[dependencies]
shiftwrangler-core = { path = "../core" }
shiftwrangler-state = { path = "../state" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
tempfile = "3"
